// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Hero > snapshots > matches snapshot - default 1`] = `
"<!--
    ┌─────────────────────────────────────────────────────────────┐
    │                          HERO                               │
    │  ┌───────────────────────────────────────────────────────┐  │
    │  │  section.hero (relative, overflow-hidden)             │  │
    │  │  ┌─────────────────────────────────────────────────┐  │  │
    │  │  │  LayoutContainer size="xl" (py-20 lg:py-32)    │  │  │
    │  │  │  ┌───────────────────────────────────────────┐  │  │  │
    │  │  │  │           [slot: default]                 │  │  │  │
    │  │  │  │                                           │  │  │  │
    │  │  │  │   • Titre (h1) - Heading                  │  │  │  │
    │  │  │  │   • Description (p) - Text                │  │  │  │
    │  │  │  │   • CTA Buttons (LayoutContainerFlex)     │  │  │  │
    │  │  │  │                                           │  │  │  │
    │  │  │  └───────────────────────────────────────────┘  │  │  │
    │  │  └─────────────────────────────────────────────────┘  │  │
    │  └───────────────────────────────────────────────────────┘  │
    │                                                             │
    │  Props:                                                     │
    │    • variant: default | primary | gradient | dark           │
    │    • centered: boolean (défaut: true)                       │
    │                                                             │
    │  Slots:                                                     │
    │    • default: Contenu du Hero (titre, desc, CTA)            │
    │                                                             │
    │  Events: Aucun (wrapper de présentation)                    │
    │                                                             │
    │  Variants:                                                  │
    │    • default: bg-gray-50, text-gray-900                     │
    │    • primary: bg-blue-600, text-white                       │
    │    • gradient: bg-gradient-to-br from-blue-600 to-blue-900  │
    │    • dark: bg-gray-900, text-white                          │
    └─────────────────────────────────────────────────────────────┘
  -->
<section class="relative overflow-hidden bg-gray-50 text-gray-900">
  <div class="layout-container py-20 lg:py-32">
    <div class="text-center mx-auto">
      <h1 class="heading text-5xl lg:text-6xl mb-6"> Design System Moderne </h1>
      <p class="text text-xl lg:text-2xl mb-8 max-w-2xl"> Créez des interfaces élégantes avec SwaveConnexion </p>
      <div class="layout-container-flex"><button class="button"> Commencer </button><button class="button"> En savoir plus </button></div>
    </div>
  </div>
</section>"
`;

exports[`Hero > snapshots > matches snapshot - gradient centered 1`] = `
"<!--
    ┌─────────────────────────────────────────────────────────────┐
    │                          HERO                               │
    │  ┌───────────────────────────────────────────────────────┐  │
    │  │  section.hero (relative, overflow-hidden)             │  │
    │  │  ┌─────────────────────────────────────────────────┐  │  │
    │  │  │  LayoutContainer size="xl" (py-20 lg:py-32)    │  │  │
    │  │  │  ┌───────────────────────────────────────────┐  │  │  │
    │  │  │  │           [slot: default]                 │  │  │  │
    │  │  │  │                                           │  │  │  │
    │  │  │  │   • Titre (h1) - Heading                  │  │  │  │
    │  │  │  │   • Description (p) - Text                │  │  │  │
    │  │  │  │   • CTA Buttons (LayoutContainerFlex)     │  │  │  │
    │  │  │  │                                           │  │  │  │
    │  │  │  └───────────────────────────────────────────┘  │  │  │
    │  │  └─────────────────────────────────────────────────┘  │  │
    │  └───────────────────────────────────────────────────────┘  │
    │                                                             │
    │  Props:                                                     │
    │    • variant: default | primary | gradient | dark           │
    │    • centered: boolean (défaut: true)                       │
    │                                                             │
    │  Slots:                                                     │
    │    • default: Contenu du Hero (titre, desc, CTA)            │
    │                                                             │
    │  Events: Aucun (wrapper de présentation)                    │
    │                                                             │
    │  Variants:                                                  │
    │    • default: bg-gray-50, text-gray-900                     │
    │    • primary: bg-blue-600, text-white                       │
    │    • gradient: bg-gradient-to-br from-blue-600 to-blue-900  │
    │    • dark: bg-gray-900, text-white                          │
    └─────────────────────────────────────────────────────────────┘
  -->
<section class="relative overflow-hidden bg-gradient-to-br from-blue-600 via-blue-700 to-blue-900 text-white">
  <div class="layout-container py-20 lg:py-32">
    <div class="text-center mx-auto">
      <h1>Welcome</h1>
      <p>Description</p>
    </div>
  </div>
</section>"
`;
